--- a/credentials.html
+++ b/credentials.html
@@ -5,148 +5,157 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Credentials</title>
   <style>
-    /* Reset body margin and padding */
+    /* General Reset */
     body, html {
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
       background-color: #2c2c2c; /* Dark background */
       color: white;
-      height: 100%;
-      width: 100%;
     }
 
-    /* Fullscreen container */
+    /* Container for Full Page Layout */
     .container {
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
       align-items: center;
-      min-height: 100vh;
-      width: 100%;
       padding: 20px;
-      box-sizing: border-box;
     }
 
-    /* Header section */
+    /* Header Section */
     .header {
       text-align: center;
-      margin-bottom: 50px;
-      width: 100%;
+      margin-bottom: 30px;
     }
 
-    /* Navbar */
+    .header h1 {
+      font-size: 2.5rem;
+      margin: 0;
+    }
+
+    /* Navigation Bar */
     nav {
-      text-align: center;
-      margin-bottom: 20px;
       width: 100%;
+      text-align: center;
+      margin-bottom: 30px;
     }
 
     nav a {
       text-decoration: none;
       color: #333;
-      padding: 15px 30px;
       background-color: #d6d6d6;
-      border-radius: 4px;
-      margin: 0 15px;
-      font-size: 18px;
+      padding: 10px 20px;
+      border-radius: 5px;
+      margin: 0 10px;
+      font-size: 1rem;
+      display: inline-block;
     }
 
     nav a:hover {
       background-color: #bbb;
     }
 
-    /* Section with the credentials cards */
+    /* Credentials Section */
     .credentials-section {
       display: flex;
-      justify-content: space-between;
-      gap: 20px;
       flex-wrap: wrap;
-      width: 100%;
-      margin-top: 30px;
       justify-content: center;
+      gap: 20px;
+      width: 100%;
     }
 
     .credential-card {
       background-color: #333;
-      padding: 20px;
       border-radius: 8px;
-      text-align: center;
+      padding: 20px;
       width: 30%;
       max-width: 350px;
-      min-width: 250px;
-      margin-bottom: 30px;
+      min-width: 280px;
+      text-align: center;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 
     .credential-card img {
       width: 100%;
-      height: 200px;
-      background-color: #ccc; /* Placeholder for image */
-      object-fit: cover;  /* Ensures image fits without distortion */
+      height: auto;
+      max-height: 200px;
       border-radius: 8px;
+      background-color: #ccc;
+      object-fit: cover;
     }
 
     .credential-card p {
-      margin-top: 15px;
-      font-size: 16px;
-      line-height: 1.6;
+      font-size: 1rem;
+      line-height: 1.5;
+      margin: 15px 0;
     }
 
     .credential-card footer {
-      margin-top: 20px;
-      font-size: 14px;
+      font-size: 0.9rem;
       color: #aaa;
     }
 
-    /* Full width for nav and content */
-    .header h1, nav a {
-      width: 100%;
-    }
-
-    /* Responsive adjustments for mobile/tablet screens */
+    /* Responsive Design */
     @media (max-width: 768px) {
-      .credentials-section {
-        justify-content: center;
-      }
-
       .credential-card {
-        width: 90%;
-        margin-bottom: 20px;
+        width: 80%;
       }
 
       nav a {
-        padding: 10px 20px;
-        font-size: 16px;
+        font-size: 0.9rem;
+        padding: 8px 16px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .credential-card {
+        width: 100%;
+      }
+
+      .header h1 {
+        font-size: 2rem;
+      }
+
+      nav a {
+        margin: 5px;
       }
     }
   </style>
 </head>
 <body>
   <div class="container">
+    <!-- Navigation Bar -->
     <nav>
       <a href="index.html">Home</a>
       <a href="#">Credentials</a>
     </nav>
 
+    <!-- Header Section -->
     <div class="header">
       <h1>Credentials</h1>
     </div>
 
+    <!-- Credentials Cards -->
     <div class="credentials-section">
+      <!-- Kyrie Irving -->
       <div class="credential-card">
         <img src="kyrie-irving.jpg" alt="Kyrie Irving">
         <p>The coaches are amazing—knowledgeable, approachable, and so motivating. They push you to your limits while teaching you the finer details of the game. It's like having a personal trainer and mentor rolled into one.</p>
-        <footer>Kyrie Irving in an interview 12 April, 2024</footer>
+        <footer>Kyrie Irving in an interview, 12 April 2024</footer>
       </div>
+
+      <!-- Steph Curry -->
       <div class="credential-card">
         <img src="steph-curry.jpg" alt="Steph Curry">
         <p>This program transformed my game! My ball-handling, shooting accuracy, and footwork have improved more than I ever imagined. The drills are intense but effective, and I see the results every time I hit the court!</p>
-        <footer>Steph Curry in an interview 23 September, 2023</footer>
+        <footer>Steph Curry in an interview, 23 September 2023</footer>
       </div>
+
+      <!-- LeBron James -->
       <div class="credential-card">
         <img src="lebron-james.jpg" alt="LeBron James">
         <p>After just a few sessions, I noticed a huge boost in my stamina, speed, and vertical jump. I feel more confident in games and have received compliments from my teammates and coaches. Best investment I've made in my basketball career.</p>
-        <footer>LeBron James in an interview 2 March, 2024</footer>
+        <footer>LeBron James in an interview, 2 March 2024</footer>
       </div>
     </div>
   </div>
