--- a/professionals.html
+++ b/professionals.html
@@ -3,137 +3,140 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trained Professionals</title>
+  <title>Credentials</title>
   <style>
-    /* Reset body margin and padding */
+    /* General Reset */
     body, html {
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
       background-color: #2c2c2c; /* Dark background */
       color: white;
-      height: 100%;
-      width: 100%;
     }
 
-    /* Fullscreen container */
+    /* Container for Full Page Layout */
     .container {
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
       align-items: center;
-      min-height: 100vh;
-      width: 100%;
       padding: 20px;
-      box-sizing: border-box;
     }
 
-    /* Header section */
+    /* Header Section */
     .header {
       text-align: center;
-      margin-bottom: 50px;
-      width: 100%;
+      margin-bottom: 30px;
     }
 
-    /* Navbar */
+    .header h1 {
+      font-size: 2.5rem;
+      margin: 0;
+    }
+
+    /* Navigation Bar */
     nav {
-      text-align: center;
-      margin-bottom: 20px;
       width: 100%;
+      text-align: center;
+      margin-bottom: 30px;
     }
 
     nav a {
       text-decoration: none;
       color: #333;
-      padding: 15px 30px;
       background-color: #d6d6d6;
-      border-radius: 4px;
-      margin: 0 15px;
-      font-size: 18px;
+      padding: 10px 20px;
+      border-radius: 5px;
+      margin: 0 10px;
+      font-size: 1rem;
+      display: inline-block;
     }
 
     nav a:hover {
       background-color: #bbb;
     }
 
-    /* Section with the credentials cards */
-    .credentials-section {
+    /* Credentials Section */
+    .trainer-section {
       display: flex;
-      justify-content: space-between;
-      gap: 20px;
       flex-wrap: wrap;
-      width: 100%;
-      margin-top: 30px;
       justify-content: center;
+      gap: 20px;
+      width: 100%;
     }
 
-    .credential-card {
+    .trainer-card {
       background-color: #333;
-      padding: 20px;
       border-radius: 8px;
-      text-align: center;
+      padding: 20px;
       width: 30%;
       max-width: 350px;
-      min-width: 250px;
-      margin-bottom: 30px;
+      min-width: 280px;
+      text-align: center;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
 
-    .credential-card img {
+    .trainer-card img {
       width: 100%;
-      height: 200px;
-      background-color: #ccc; /* Placeholder for image */
-      object-fit: cover;
+      height: auto;
+      max-height: 200px;
       border-radius: 8px;
+      background-color: #ccc;
+      object-fit: cover;
     }
 
-    .credential-card p {
-      margin-top: 15px;
-      font-size: 16px;
-      line-height: 1.6;
+    .trainer-card p {
+      font-size: 1rem;
+      line-height: 1.5;
+      margin: 15px 0;
     }
 
-    .credential-card footer {
-      margin-top: 20px;
-      font-size: 14px;
+    .trainer-card footer {
+      font-size: 0.9rem;
       color: #aaa;
     }
 
-    /* Full width for nav and content */
-    .header h1, nav a {
-      width: 100%;
-    }
-
-    /* Responsive adjustments for mobile/tablet screens */
+    /* Responsive Design */
     @media (max-width: 768px) {
-      .credentials-section {
-        justify-content: center;
-      }
-
-      .credential-card {
-        width: 90%;
-        margin-bottom: 20px;
+      .trainer-card {
+        width: 80%;
       }
 
       nav a {
-        padding: 10px 20px;
-        font-size: 16px;
+        font-size: 0.9rem;
+        padding: 8px 16px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .credential-card {
+        width: 100%;
+      }
+
+      .header h1 {
+        font-size: 2rem;
+      }
+
+      nav a {
+        margin: 5px;
       }
     }
   </style>
 </head>
 <body>
   <div class="container">
+    <!-- Navigation Bar -->
     <nav>
       <a href="index.html">Home</a>
-      <a href="#">Professionals</a>
+      <a href="#">Trainers</a>
     </nav>
 
+    <!-- Header Section -->
     <div class="header">
       <h1>Trainers</h1>
     </div>
 
-    <div class="credentials-section">
-      <div class="credential-card">
+    <div class="trainer-section">
+      <div class="trainer-card">
         <img src="greg-popovich.jpg" alt="Greg Popovich">
         <p>Team: San Antonio Spurs (NBA)</p>
         <p>Achievements:</p>
@@ -142,7 +145,7 @@
         <p>Known for: Exceptional game strategy, adaptability, and creating a strong team culture.</p>
         
       </div>
-      <div class="credential-card">
+      <div class="trainer-card">
         <img src="phil-jackson.jpg" alt="Phil Jackson">
         <p>Teams: Chicago Bulls, Los Angeles Lakers (NBA)
         <p>Achievements:</p>
@@ -151,7 +154,7 @@
         <p>Known for: Popularizing the Triangle Offense and managing star players effectively.</p>
         
       </div>
-      <div class="credential-card">
+      <div class="trainer-card">
         <img src="geno-auriemma.jpg" alt="Geno Auriemma">
         <p>Team: University of Connecticut (UConn Women's Basketball)</p>
         <p>Achievements:</p>
