--- a/OffCourt.html
+++ b/OffCourt.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Workout (Off the Court)</title>
+  <title>Workout (On the Court)</title>
   <style>
     /* Reset body and html */
     body, html {
@@ -33,6 +33,7 @@
       background-color: #222;
       color: white;
       position: relative;
+      width: 100%;
     }
 
     .header a {
@@ -98,6 +99,16 @@
       font-size: 18px;
     }
 
+    .video-container {
+      flex: 1; /* Allow the video section to grow */
+      max-width: 500px; /* Set max width of the video container */
+      border: 2px solid yellow;
+      background-color: #000; /* Optional: background color for better visibility */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
     .upload-section button {
       background-color: black;
       color: white;
@@ -142,15 +153,28 @@
     </div>
 
     <!-- Main Content -->
+    
     <div class="content">
       <h2>We’ll be doing a list of things</h2>
       <ul>
-        <li>Push-ups (5 × 20)</li>
-        <li>Sit-ups (5 × 20)</li>
-        <li>Crunches (5 × 15)</li>
-        <li>Squats (5 × 15)</li>
-        <li>Jump Squats (5 × failure)</li>
+        <li>17's (touching the ends of the court for 17 times)</li>
+        <li>Block to block slides (to stay in the paint and slide from one end of the paint to another)</li>
+        <li>Double down and back (running to and fro for 2 times down the court)</li>
+        <li>Sprint x Back Pedal (3 reps per set)</li>
+        <li>Walk, Jog, Sprint drill (8 reps per set)</li>
+        <li>Watch this video for more information!</li>
       </ul>
+      <div class="video-container">
+        <iframe 
+          width="100%" 
+          height="100%" 
+          src="https://www.youtube.com/embed/b7rr3IfRcyo" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+          allowfullscreen>
+        </iframe>
+      </div>
       <div class="upload-section">
         <span>Snap a picture</span>
         <button onclick="navigateToUpload()">Upload</button>
