fixing the location

--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
         <h3 class="overlay-text">Credentials</h3>
         <img src="text.jpg" alt="Credentials" class="box-image">
       </div>
-      <button>Go</button>
+      <button onclick="window.location.href='credentials.html';">Go</button>
     </div>
     <div class="box">
       <div class="image-container">
         <h3 class="overlay-text">Workout</h3>
         <img src="workout.jpg" alt="Workout" class="box-image">
       </div>
-      <button>Go</button>
+      <button onclick="window.location.href='workout.html';">Go</button>
     </div>
     <div class="box">
       <div class="image-container">
