--- a/OffCourt.html
+++ b/OffCourt.html
@@ -109,6 +109,12 @@
       align-items: center;
     }
 
+    .video-container video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
     .upload-section button {
       background-color: black;
       color: white;
@@ -165,15 +171,10 @@
         <li>Watch this video for more information!</li>
       </ul>
       <div class="video-container">
-        <iframe 
-          width="100%" 
-          height="100%" 
-          src="https://www.youtube.com/embed/b7rr3IfRcyo" 
-          title="YouTube video player" 
-          frameborder="0" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-          allowfullscreen>
-        </iframe>
+        <video controls>
+          <source src="OffCourt.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
       </div>
       <div class="upload-section">
         <span>Snap a picture</span>
