--- a/OnCourt.html
+++ b/OnCourt.html
@@ -99,10 +99,21 @@
       font-size: 18px;
     }
 
+    .video-container {
+      flex: 1; /* Allow the video section to grow */
+      max-width: 500px; /* Set max width of the video container */
+      border: 2px solid yellow;
+      background-color: #000; /* Optional: background color for better visibility */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
     .video-container video {
       width: 100%;
       height: 100%;
       object-fit: cover;
+    }
 
     .upload-section button {
       background-color: black;
