--- a/index.html
+++ b/index.html
@@ -4,109 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Basketball League</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    header {
-      text-align: center;
-      margin: 20px 0;
-    }
-
-    header h1 {
-      font-size: 2.5rem;
-    }
-
-    header p {
-      font-size: 1.25rem;
-      color: #555;
-    }
-
-    .box-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      width: 100%;
-      padding: 20px;
-      box-sizing: border-box;
-    }
-
-    .box {
-      background-color: #ddd;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
-      width: 100%;
-      max-width: 350px;
-      height: auto; /* Allow height to adapt */
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      overflow: hidden;
-    }
-
-    .image-container {
-      position: relative;
-      width: 100%;
-      height: 300px; /* Define height for images */
-    }
-
-    .box-image {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    .overlay-text {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 10px 20px;
-      font-size: 1.5rem;
-      border-radius: 5px;
-      text-align: center;
-      z-index: 2;
-    }
-
-    button {
-      margin: 10px;
-      background-color: black;
-      color: white;
-      padding: 10px 20px;
-      font-size: 1rem;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #333;
-    }
-
-    /* Mobile-friendly styles */
-    @media (max-width: 600px) {
-      .box {
-        width: 90%; /* Adjust width for smaller screens */
-      }
-
-      button {
-        width: 80%; /* Ensure button is touch-friendly */
-        font-size: 1.2rem;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="assign_1.css">
+  
 </head>
 <body>
   <header>
