--- a/credentials.html
+++ b/credentials.html
@@ -4,123 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Credentials</title>
-  <style>
-    /* General Reset */
-    body, html {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background-color: #2c2c2c; /* Dark background */
-      color: white;
-    }
-
-    /* Container for Full Page Layout */
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 20px;
-    }
-
-    /* Header Section */
-    .header {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-
-    .header h1 {
-      font-size: 2.5rem;
-      margin: 0;
-    }
-
-    /* Navigation Bar */
-    nav {
-      width: 100%;
-      text-align: center;
-      margin-bottom: 30px;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: #333;
-      background-color: #d6d6d6;
-      padding: 10px 20px;
-      border-radius: 5px;
-      margin: 0 10px;
-      font-size: 1rem;
-      display: inline-block;
-    }
-
-    nav a:hover {
-      background-color: #bbb;
-    }
-
-    /* Credentials Section */
-    .credentials-section {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      width: 100%;
-    }
-
-    .credential-card {
-      background-color: #333;
-      border-radius: 8px;
-      padding: 20px;
-      width: 30%;
-      max-width: 350px;
-      min-width: 280px;
-      text-align: center;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    .credential-card img {
-      width: 100%;
-      height: auto;
-      max-height: 200px;
-      border-radius: 8px;
-      background-color: #ccc;
-      object-fit: cover;
-    }
-
-    .credential-card p {
-      font-size: 1rem;
-      line-height: 1.5;
-      margin: 15px 0;
-    }
-
-    .credential-card footer {
-      font-size: 0.9rem;
-      color: #aaa;
-    }
-
-    /* Responsive Design */
-    @media (max-width: 768px) {
-      .credential-card {
-        width: 80%;
-      }
-
-      nav a {
-        font-size: 0.9rem;
-        padding: 8px 16px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .credential-card {
-        width: 100%;
-      }
-
-      .header h1 {
-        font-size: 2rem;
-      }
-
-      nav a {
-        margin: 5px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="assign_1.css">
 </head>
 <body>
   <div class="container">
