--- a/OnCourt.html
+++ b/OnCourt.html
@@ -4,158 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Workout (On the Court)</title>
-  <style>
-    /* Reset body and html */
-    body, html {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background-color: #2c2c2c; /* Dark background */
-      color: white;
-      height: 100%;
-      width: 100%;
-    }
-
-    /* Fullscreen container */
-    .container {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-    }
-
-    /* Header styles */
-    .header {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 15px 30px;
-      background-color: #222;
-      color: white;
-      position: relative;
-      width: 100%;
-    }
-
-    .header a {
-      text-decoration: none;
-      color: #ddd;
-      background-color: #aaa;
-      padding: 10px 20px;
-      border-radius: 5px;
-      font-size: 16px;
-      position: absolute;
-      left: 30px; /* Keeps the home button aligned to the left */
-    }
-
-    .header a:hover {
-      background-color: #888;
-    }
-
-    .header h1 {
-      font-size: 24px;
-      margin: 0;
-    }
-
-    /* Content area */
-    .content {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background-color: #f0f0f0;
-      padding: 20px;
-    }
-
-    .content h2 {
-      color: black;
-      margin-bottom: 20px;
-      font-size: 28px;
-    }
-
-    .content ul {
-      text-align: left;
-      margin: 0;
-      padding: 0;
-      list-style: disc inside;
-      color: black;
-      font-size: 18px;
-      width: 50%; /* Centered width */
-    }
-
-    .content ul li {
-      margin-bottom: 15px;
-    }
-
-    .upload-section {
-      margin-top: 30px;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-
-    .upload-section span {
-      color: black;
-      font-size: 18px;
-    }
-
-    .video-container {
-      flex: 1; /* Allow the video section to grow */
-      max-width: 500px; /* Set max width of the video container */
-      border: 2px solid yellow;
-      background-color: #000; /* Optional: background color for better visibility */
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .video-container video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    .upload-section button {
-      background-color: black;
-      color: white;
-      padding: 12px 24px;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    .upload-section button:hover {
-      background-color: #444;
-    }
-
-    /* Done button styles */
-    .done-button {
-      margin-top: 40px;
-    }
-
-    .done-button button {
-      width: 150px;
-      font-size: 18px;
-      background-color: black;
-      color: white;
-      padding: 12px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .done-button button:hover {
-      background-color: #444;
-    }
-  </style>
+  <link rel="stylesheet" href="assign_1.css">
 </head>
 <body>
   <div class="container">
     <!-- Header -->
     <div class="header">
       <a href="index.html">Home</a>
-      <h1>On the court</h1>
+      <h1>On the Court</h1>
     </div>
 
     <!-- Main Content -->
