--- a/finish.html
+++ b/finish.html
@@ -4,98 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Finish</title>
-  <style>
-    /* Reset body margin and padding */
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #2c2c2c; /* Dark background */
-      color: #000;
-    }
-
-    /* Full-screen container */
-    .container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      width: 100vw;
-      padding: 20px;
-      background-color: #f5f5f5;
-    }
-
-    /* Top header button (disabled) */
-    .header {
-      margin-bottom: 30px;
-    }
-
-    .header button {
-      background-color: #d6d6d6;
-      border: none;
-      padding: 15px 30px;
-      border-radius: 5px;
-      font-size: 18px;
-      font-weight: bold;
-      color: #555;
-      cursor: not-allowed;
-    }
-
-    /* Motivational message */
-    .message {
-      font-size: 20px;
-      margin-bottom: 30px;
-      text-align: center;
-      max-width: 800px;
-    }
-
-    /* Cooldown routine section */
-    .cooldown-routine {
-      text-align: left;
-      max-width: 800px;
-      margin-bottom: 30px;
-      font-size: 18px;
-    }
-
-    .cooldown-routine ul {
-      padding-left: 20px;
-    }
-
-    .cooldown-routine ul li {
-      margin-bottom: 10px;
-    }
-
-    /* Back to home button */
-    .back-button {
-      background-color: black;
-      color: white;
-      padding: 15px 30px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 18px;
-      font-weight: bold;
-      text-transform: uppercase;
-    }
-
-    .back-button:hover {
-      background-color: #333;
-    }
-
-    /* Responsive adjustments for smaller screens */
-    @media (max-width: 768px) {
-      .container {
-        padding: 10px;
-      }
-      .message, .cooldown-routine {
-        font-size: 16px;
-      }
-      .back-button {
-        font-size: 16px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="assign_1.css">
+  
   <script>
     function goToHome() {
       alert("Click here to earn more points!");
