--- a/points.html
+++ b/points.html
@@ -4,37 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Workout Points</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background-color: #f4f4f4;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .container {
-      text-align: center;
-    }
-    #points {
-      font-size: 24px;
-      color: green;
-    }
-    #snapshot-button, #home-button {
-      margin: 20px;
-      padding: 10px 20px;
-      font-size: 18px;
-      cursor: pointer;
-      background-color: black;
-      color: white;
-      border: none;
-      border-radius: 5px;
-    }
-    #home-button {
-      background-color: #4CAF50;
-    }
-  </style>
+  <link rel="stylesheet" href="assign_1.css">
+  
 </head>
 <body>
   <div class="container">
