--- a/credentials.html
+++ b/credentials.html
@@ -4,44 +4,121 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Credentials</title>
-  <link rel="stylesheet" href="assign_1.css">
+  <style>
+  body, html {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background-color: #2c2c2c; /* Dark background */
+    color: white;
+    box-sizing: border-box;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    min-height: 100vh;
+  }
+
+  .header {
+    text-align: center;
+    margin: 20px 0;
+  }
+
+  .header h1 {
+    font-size: 2rem;
+  }
+
+  .credentials-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    width: 100%;
+  }
+
+  .credential-card {
+    background-color: #333;
+    border-radius: 8px;
+    padding: 20px;
+    width: 30%;
+    max-width: 350px;
+    min-width: 280px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+
+  .credential-card img {
+    width: 100%; /* Make image fill card width */
+    height: 200px; /* Fix height to ensure uniformity */
+    object-fit: cover; /* Crop image to fit the container */
+    object-position: center; /* Center the cropped portion */
+    border-radius: 8px; /* Optional: Rounded edges */
+  }
+
+  .credential-card p {
+    font-size: 1rem;
+    line-height: 1.5;
+    margin: 15px 0;
+  }
+
+  .credential-card footer {
+    font-size: 0.9rem;
+    color: #aaa;
+  }
+
+  nav {
+    margin-top: 20px;
+  }
+
+  nav a {
+    text-decoration: none;
+    color: #121111;
+    background-color: #d6d6d6;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 1rem;
+  }
+
+  nav a:hover {
+    background-color: #bbb;
+  }
+</style>
+
 </head>
 <body>
   <div class="container">
-    <!-- Navigation Bar -->
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="#">Credentials</a>
-    </nav>
-
-    <!-- Header Section -->
     <div class="header">
       <h1>Credentials</h1>
     </div>
-
-    <!-- Credentials Cards -->
     <div class="credentials-section">
-      <!-- Kyrie Irving -->
       <div class="credential-card">
         <img src="kyrie-irving.jpg" alt="Kyrie Irving">
         <p>The coaches are amazing—knowledgeable, approachable, and so motivating. They push you to your limits while teaching you the finer details of the game. It's like having a personal trainer and mentor rolled into one.</p>
         <footer>Kyrie Irving in an interview, 12 April 2024</footer>
       </div>
-
-      <!-- Steph Curry -->
       <div class="credential-card">
         <img src="steph-curry.jpg" alt="Steph Curry">
-        <p>This program transformed my game! My ball-handling, shooting accuracy, and footwork have improved more than I ever imagined. The drills are intense but effective, and I see the results every time I hit the court!</p>
+        <p>This program transformed my game! My ball-handling, shooting accuracy, and footwork have improved more than I ever imagined. The drills are intense but effective, and I see the results every time I hit the court.</p>
         <footer>Steph Curry in an interview, 23 September 2023</footer>
       </div>
-
-      <!-- LeBron James -->
       <div class="credential-card">
         <img src="lebron-james.jpg" alt="LeBron James">
-        <p>After just a few sessions, I noticed a huge boost in my stamina, speed, and vertical jump. I feel more confident in games and have received compliments from my teammates and coaches. Best investment I've made in my basketball career.</p>
+        <p>After just a few sessions, I noticed a huge boost in my stamina, confidence, and overall game. This has been one of the best investments I've made in my basketball career.</p>
         <footer>LeBron James in an interview, 2 March 2024</footer>
       </div>
     </div>
+    <nav>
+      <a href="index.html">Back to Home</a>
+    </nav>
   </div>
 </body>
 </html>
+
+
+
+
+
+
