--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Basketball League</title>
+  
   <link rel="stylesheet" href="assign_1.css">
 </head>
 <body>
-  <header>
-    <h1>Welcome to Basketball League</h1>
-    <p>Train Like a Pro, Play Like a Champ.</p>
+  <header style="background-color: lightgray; text-align: center; padding: 20px; z-index: 10;">
+    <h1 style="font-size: 3rem; color: black; margin: 10px;">Welcome to Basketball League</h1>
+    <p style="font-size: 1.5rem; color: gray;">Train Like a Pro, Play Like a Champ.</p>
   </header>
+  
   <div class="box-container">
     <div class="box">
       <div class="image-container">
