--- a/professionals.html
+++ b/professionals.html
@@ -83,7 +83,7 @@
       border-radius: 8px;
       background-color: #ccc;
       object-fit: cover;
-    }
+    } assdasd
 
     .trainer-card p {
       font-size: 1rem;
