sorted all the files into folders to make it neater.

--- a/html/credentials.html
+++ b/html/credentials.html
@@ -95,23 +95,23 @@
     </div>
     <div class="credentials-section">
       <div class="credential-card">
-        <img src="kyrie-irving.jpg" alt="Kyrie Irving">
+        <img src="/images/kyrie-irving.jpg" alt="Kyrie Irving">
         <p>The coaches are amazing—knowledgeable, approachable, and so motivating. They push you to your limits while teaching you the finer details of the game. It's like having a personal trainer and mentor rolled into one.</p>
         <footer>Kyrie Irving in an interview, 12 April 2024</footer>
       </div>
       <div class="credential-card">
-        <img src="steph-curry.jpg" alt="Steph Curry">
+        <img src="/images/steph-curry.jpg" alt="Steph Curry">
         <p>This program transformed my game! My ball-handling, shooting accuracy, and footwork have improved more than I ever imagined. The drills are intense but effective, and I see the results every time I hit the court.</p>
         <footer>Steph Curry in an interview, 23 September 2023</footer>
       </div>
       <div class="credential-card">
-        <img src="lebron-james.jpg" alt="LeBron James">
+        <img src="/images/lebron-james.jpg" alt="LeBron James">
         <p>After just a few sessions, I noticed a huge boost in my stamina, confidence, and overall game. This has been one of the best investments I've made in my basketball career.</p>
         <footer>LeBron James in an interview, 2 March 2024</footer>
       </div>
     </div>
     <nav>
-      <a href="index.html">Back to Home</a>
+      <a href="/html/index.html">Back to Home</a>
     </nav>
   </div>
 </body>
