--- a/html/finish.html
+++ b/html/finish.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Finish</title>
-  <link rel="stylesheet" href="assign_1.css">
+  <link rel="stylesheet" href="/css/assign_1.css">
   
   <script>
     function goToHome() {
       alert("Click here to earn more points!");
-      window.location.href = "points.html"; 
+      window.location.href = "/html/points.html"; 
     }
   </script>
 </head>
