--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Basketball League</title>
   
-  <link rel="stylesheet" href="assign_1.css">
+  <link rel="stylesheet" href="/css/assign_1.css">
 </head>
 <body>
   <header style="background-color: lightgray; text-align: center; padding: 20px; z-index: 10;">
@@ -17,23 +17,23 @@
     <div class="box">
       <div class="image-container">
         <h3 class="overlay-text">Credentials</h3>
-        <img src="text.jpg" alt="Credentials" class="box-image">
+        <img src="/images/text.jpg" alt="Credentials" class="box-image">
       </div>
       <button onclick="window.location.href='credentials.html';">Go</button>
     </div>
     <div class="box">
       <div class="image-container">
         <h3 class="overlay-text">Workout</h3>
-        <img src="workout.jpg" alt="Workout" class="box-image">
+        <img src="/images/workout.jpg" alt="Workout" class="box-image">
       </div>
       <button onclick="window.location.href='workout.html';">Go</button>
     </div>
     <div class="box">
       <div class="image-container">
         <h3 class="overlay-text">Professionals</h3>
-        <img src="professionals.jpg" alt="Professionals" class="box-image">
+        <img src="/images/professionals.jpg" alt="Professionals" class="box-image">
       </div>
-      <button onclick="window.location.href='professionals.html';">Go</button>
+      <button onclick="window.location.href='/html/professionals.html';">Go</button>
     </div>
   </div>
   </div>
