--- a/html/professionals.html
+++ b/html/professionals.html
@@ -129,7 +129,7 @@
   <div class="container">
     <!-- Navigation Bar -->
     <nav>
-      <a href="index.html">Home</a>
+      <a href="/html/index.html">Home</a>
       <a href="#">Trainers</a>
     </nav>
 
@@ -140,7 +140,8 @@
 
     <div class="trainer-section">
       <div class="trainer-card">
-        <img src="greg-popovich.jpg" alt="Greg Popovich">
+        <img src="/images/greg-popovich.jpg" alt="Greg Popovich">
+        <h2>Greg Popovich</h2>
         <p>Team: San Antonio Spurs (NBA)</p>
         <p>Achievements:</p>
         <p>5-time NBA Champion.</p>
@@ -149,7 +150,8 @@
         
       </div>
       <div class="trainer-card">
-        <img src="phil-jackson.jpg" alt="Phil Jackson">
+        <img src="/images/phil-jackson.jpg" alt="Phil Jackson">
+        <h2>Phil Jackson</h2>
         <p>Teams: Chicago Bulls, Los Angeles Lakers (NBA)
         <p>Achievements:</p>
         <p>11 NBA Championships (6 with the Bulls, 5 with the Lakers).</p>
@@ -158,7 +160,8 @@
         
       </div>
       <div class="trainer-card">
-        <img src="geno-auriemma.jpg" alt="Geno Auriemma">
+        <img src="/images/geno-auriemma.jpg" alt="Geno Auriemma">
+        <h2>Geno Auriemma</h2>
         <p>Team: University of Connecticut (UConn Women's Basketball)</p>
         <p>Achievements:</p>
         <p>11 NCAA National Championships.</p>
