--- a/html/uploadpic.html
+++ b/html/uploadpic.html
@@ -99,7 +99,7 @@
   <script>
     // Function to redirect to index.html
     function redirectToHome() {
-      window.location.href = "finish.html"; // Change to the correct path if necessary
+      window.location.href = "/html/finish.html"; // Change to the correct path if necessary
     }
   </script>
 </body>
