--- a/html/workout.html
+++ b/html/workout.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Workout Selection</title>
-  <link rel="stylesheet" href="assign_1.css">
+  <link rel="stylesheet" href="/css/assign_1.css">
 </head>
 <body>
   <div class="container">
@@ -22,14 +22,14 @@
     <div class="workouts">
       <!-- On the court workout -->
       <div class="workout-card">
-        <img src="oncourt.jpg" alt="On court" class="on-court-img">
+        <img src="/images/oncourt.jpg" alt="On court" class="on-court-img">
         <h2>On Court Drills</h2>
         <button onclick="goToWorkout('OnCourt.html')">Select</button>
       </div>
 
       <!-- Off the court workout -->
       <div class="workout-card">
-        <img src="offcourt.jpg" alt="Off Court">
+        <img src="/images/offcourt.jpg" alt="Off Court">
         <h2>Off Court Drills</h2>
         <button onclick="goToWorkout('OffCourt.html')">Select</button>
       </div>
