--- a/html/OffCourt.html
+++ b/html/OffCourt.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Workout (On the Court)</title>
-  <link rel="stylesheet" href="assign_1.css">
+  <link rel="stylesheet" href="/css/assign_1.css">
 </head>
 <body>
   <div class="container">
     <!-- Header -->
     <div class="header">
-      <a href="index.html">Home</a>
+      <a href="/html/index.html">Home</a>
       <h1>On the Court</h1>
     </div>
 
@@ -27,7 +27,7 @@
       </ul>
       <div class="video-container">
         <video controls>
-          <source src="OffCourt.mp4" type="video/mp4">
+          <source src="/videos/OffCourt.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
@@ -44,7 +44,7 @@
   <script>
     // Navigate to the upload page
     function navigateToUpload() {
-      window.location.href = 'uploadpic.html';
+      window.location.href = '/html/uploadpic.html';
     }
   </script>
 </body>
