--- a/html/points.html
+++ b/html/points.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Workout Points</title>
-  <link rel="stylesheet" href="assign_1.css">
+  <link rel="stylesheet" href="/css/assign_1.css">
   
 </head>
 <body>
@@ -17,10 +17,10 @@
     <button id="snapshot-button">Take Picture</button>
     
     <!-- Home Button -->
-    <button id="home-button" onclick="window.location.href='index.html';">Home</button>
+    <button id="home-button" onclick="window.location.href='/html/index.html';">Home</button>
   </div>
 
-  <script src="assign_1.js"></script>
+  <script src="/script/assign_1.js"></script>
 </body>
 </html>
 
